# react-blog-experiment

./: .gitignore  Cargo.toml  README.md  Rocket.toml  admin_hash  package-lock.json  secret_key
db/migrations/: 20231019202556_articles.sql
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  styles.css
frontend/src/components/: AdminForm.js  Banner.js  EditorToolbarPlugin.js  Footer.js  ImagePlugin.js  ImpenetrableButton.js  editor-menus.js  editor-toggles.js  editor.js  savePlugin.js  styles.css
frontend/src/navigation/: route.js
frontend/src/pages/: Article.js  Blogs.js  Home.js  Layout.js  Secret.js  Writing.js
frontend/src/requests/: admin.js  articles.js  common.js
frontend/src/static/: cv.json
migrations/: 20231019202556_articles.sql
src/: administration_tool.rs  articles.rs  lib.rs  main.rs
src/authentication/: routes.rs  utils.rs
test_data/: test.md
