[package]
name = "rocket-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
dialoguer = "0.11.0"
serde = "1.0.188"
sha2 = "0.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
rocket = "=0.5.0-rc.3"
features = ["json"]

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "admin"
path = "src/administration_tool.rs"
